[ThinSensors] Finished the residuals and global detection efficiency

--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -911,7 +911,7 @@ and assumptions.
 
 
 
-\subsubsection{Binary readout}
+\subsubsection{Binary readout} \label{sec:binaryReadout}
 The simplest case for the resolution computation is to consider a
 binary readout with single threshold. For a pixel centered at 0 and
 having a pitch $p$ with a probability density function as illustrated
