--- a/include/appendix_ThinSensors.tex
+++ b/include/appendix_ThinSensors.tex
@@ -277,6 +277,41 @@
   \label{fig:Residuals_vs_biasVoltage}
 \end{figure}
 
+\subsection{Residuals vs. threshold}
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/residuals_W0019_G07_THLscan.pdf}
+    \caption{20-NGR}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/residuals_W0019_F07_THLscan.pdf}
+    \caption{23-FGR}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/residuals_W0019_L08_THLscan.pdf}
+    \caption{28-GNDGR}
+  \end{subfigure} \\
+
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/residuals_W0019_C07_THLscan.pdf}
+    \caption{55-GNDGR}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/residuals_W0005_E02_THLscan.pdf}
+    \caption{55-GND-GR-100}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/residuals_W0005_F01_THLscan.pdf}
+    \caption{55-GND-GR-150}
+  \end{subfigure}\\
+  \begin{subfigure}[b]{0.33\textwidth}
+
+    \caption{W2\_J5}
+  \end{subfigure}
+  \caption{Residuals vs. threshold.}
+  \label{fig:Residuals_vs_Threshold}
+\end{figure}
+
 \newpage
 
 
