--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -421,8 +421,6 @@ efficiency for different sensor thicknesses. For thinner sensors, the
 energy deposition is lower and the efficiency drops more quickly by
 increasing the threshold than for thick sensors.
 
-
-
 \begin{figure}[htbp] 
   \centering
   \includegraphics[width=0.5\textwidth]{./figures/TestBeam/Efficiency_vs_THL.pdf}
@@ -432,61 +430,178 @@ increasing the threshold than for thick sensors.
 \end{figure}
 
 
+
+%% --------------------------------------------- %%
+\section{Calibrated test beam data}
+
+The test pulse calibration as described in
+\cref{sec:EnergyCalibration} is applied to the data from test beams in
+order to convert the energy deposited by the MIP
+particles. \cref{sec:testBeamDataCalibrated_vs_G4} compares the
+calibrated data with the \textsc{Geant4} energy deposition using the
+PAI physics list (c.f. \cref{sec:Silicon_Geant4}) for $50\,\micron$,
+$100\,\micron$ and $150\,\micron$ thick planar sensors. There is a
+good agreement in terms of the most probable value (MPV) and the
+full-width-at-half-maximum (FWHM) in both simulation and data.
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0019_G07.pdf}
+    \caption{55-GNDGR}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0005_E02.pdf}
+    \caption{55-GNDGR-100}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_G4_W0005_F01.pdf}
+    \caption{55-GNDGR-150}
+  \end{subfigure}
+  \caption{Calibrated energy distribution of test beam data for
+    different assemblies. The pixel-by-pixel calibration is applied to
+    the data which is obtained using test pulses. \textsc{Geant4}
+    energy deposition is obtained using the PAI physics list.}
+  \label{sec:testBeamDataCalibrated_vs_G4}
+\end{figure}
+
+\cref{sec:testBeamDataCalibrated_TOT} shows the TOT distribution for
+one, two, three and four-hit clusters. The MPV of the TOT
+distributions for different cluster sizes do not align due to the
+non-linear behaviour of the Timepix3, as sharing the same deposited
+charge amongst several pixels results in each pixel having a higher
+TOT than would be expected from simply scaling the charge. The
+calibrated energy distribution aligns for different cluster sizes
+since the calibration takes into account the non-linearities of the
+chip as shown in \cref{sec:testBeamDataCalibrated_Edep}. For the
+$50\,\micron$ thick sensor, the calibrated distributions do not
+align. This is due to the low energy deposition in thin sensors
+especially for multi-hit clusters where the energy deposition per
+pixel is close to the threshold.
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0019_G07.pdf}
+    \caption{55-GNDGR}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_E02.pdf}
+    \caption{55-GNDGR-100}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/TOT_Clusters_W0005_F01.pdf}
+    \caption{55-GNDGR-150}
+  \end{subfigure}
+  \caption{TOT distribution for one, two, three and four-hit clusters
+    for various assemblies with (a) $50\,\micron$, (b) $100\,\micron$
+    and (c) $150\,\micron$ thick planar sensors.}
+  \label{sec:testBeamDataCalibrated_TOT}
+\end{figure}
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0019_G07.pdf}
+    \caption{55-GNDGR}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_E02.pdf}
+    \caption{55-GNDGR-100}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/Calibration/Edep_Clusters_W0005_F01.pdf}
+    \caption{55-GNDGR-150}
+  \end{subfigure}
+  \caption{Energy deposition distribution for one, two, three and
+    four-hit clusters for various assemblies with (a) $50\,\micron$,
+    (b) $100\,\micron$ and (c) $150\,\micron$ thick planar sensors.}
+  \label{sec:testBeamDataCalibrated_Edep}
+\end{figure}
+
+For all the assemblies, the energy deposition in \ev is given in \cref{sec:appendixCalibDataG4}.
+
+
 %% --------------------------------------------- %%
 \section{Validation of the simulation}
 
-The simulations using AllPix are validated with the data as shown in
-\cref{fig:G4_simu_data_50micron,fig:G4_simu_data_100micron,fig:G4_simu_data_150micron}.
+The AllPix simulation framework (described in \cref{sec:AllPix}) is
+used to simulate the performance of thin sensors and to understand the
+charge sharing in such sensors. The simulations are compared and
+validated with the test-beam data.
+
+The cluster size, the residuals and the energy deposition
+distributions are shown in
+\cref{fig:G4_simu_data_cluSize,fig:G4_simu_data_Residuals,fig:G4_simu_data_Edep}
+comparing data and simulations.
 
 \begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.3\textwidth}
+  \begin{subfigure}[b]{0.23\textwidth}
     \includegraphics[width=\textwidth]{figures/TestBeam/50micron_sizeX.pdf}
-    \caption{}
+    \caption{$50\,\micron$ n-in-p}
   \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_resX.pdf}
-    \caption{}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_Edep.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{For $50\,\micron$ thick sensor.}
-  \label{fig:G4_simu_data_50micron}
-\end{figure}
-
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.3\textwidth}
+  \begin{subfigure}[b]{0.23\textwidth}
     \includegraphics[width=\textwidth]{figures/TestBeam/100micron_sizeX.pdf}
-    \caption{}
+    \caption{$100\,\micron$ n-in-p}
   \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_resX.pdf}
-    \caption{}
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_sizeX.pdf}
+    \caption{$150\,\micron$ n-in-p}
   \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_Edep.pdf}
-    \caption{}
+  \begin{subfigure}[b]{0.23\textwidth}
+
+    \caption{$300\,\micron$ p-in-n}
   \end{subfigure}
-  \caption{For $100\,\micron$ thick sensor.}
-  \label{fig:G4_simu_data_100micron}
+  \caption{The cluster size distribution in simulation and data for
+    $50\,\micron$, $100\,\micron$, $150\,\micron$ and $300\,\micron$
+    thick sensors. The assemblies are operated at the nominal
+    conditions.}
+  \label{fig:G4_simu_data_cluSize}
 \end{figure}
 
 \begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_sizeX.pdf}
-    \caption{}
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_resX.pdf}
+    \caption{$50\,\micron$ n-in-p}
   \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.3\textwidth}
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_resX.pdf}
+    \caption{$100\,\micron$ n-in-p}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
     \includegraphics[width=\textwidth]{figures/TestBeam/150micron_resX.pdf}
-    \caption{}
+    \caption{$150\,\micron$ n-in-p}
   \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_Edep.pdf}
-    \caption{}
+  \begin{subfigure}[b]{0.23\textwidth}
+
+    \caption{$300\,\micron$ p-in-n}
   \end{subfigure}
-  \caption{For $150\,\micron$ thick sensor.}
-  \label{fig:G4_simu_data_150micron}
+  \caption{The residuals distribution in simulation and data for
+    $50\,\micron$, $100\,\micron$, $150\,\micron$ and $300\,\micron$
+    thick sensors. The assemblies are operated at the nominal
+    conditions. The tracking resolution is not unfolded.}
+  \label{fig:G4_simu_data_Residuals}
+\end{figure}
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_Edep.pdf}
+    \caption{$50\,\micron$ n-in-p}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_Edep.pdf}
+    \caption{$100\,\micron$ n-in-p}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_Edep.pdf}
+    \caption{$150\,\micron$ n-in-p}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.23\textwidth}
+
+    \caption{$300\,\micron$ p-in-n}
+  \end{subfigure}
+  \caption{The energy deposition in simulation and data for
+    $50\,\micron$, $100\,\micron$, $150\,\micron$ and $300\,\micron$
+    thick sensors. The assemblies are operated at the nominal
+    conditions.}
+  \label{fig:G4_simu_data_Edep}
 \end{figure}
 
 %% --------------------------------------------- %%
@@ -631,3 +746,55 @@ The simulations using AllPix are validated with the data as shown in
 %   \caption{Cluster size and residuals vs. thickness (run 2003 for 300 um thick sensor was taken at 70 V).}
 %   \label{fig:clusize_residuals_vs_thickness}
 % \end{figure}
+
+
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.3\textwidth}
+%%     \includegraphics[width=\textwidth]{figures/TestBeam/50micron_sizeX.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.3\textwidth}
+%%     \includegraphics[width=\textwidth]{figures/TestBeam/50micron_resX.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.3\textwidth}
+%%     \includegraphics[width=\textwidth]{figures/TestBeam/50micron_Edep.pdf}
+%%     \caption{}
+%%   \end{subfigure}
+%%   \caption{For $50\,\micron$ thick sensor.}
+%%   \label{fig:G4_simu_data_50micron}
+%% \end{figure}
+
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.3\textwidth}
+%%     \includegraphics[width=\textwidth]{figures/TestBeam/100micron_sizeX.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.3\textwidth}
+%%     \includegraphics[width=\textwidth]{figures/TestBeam/100micron_resX.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.3\textwidth}
+%%     \includegraphics[width=\textwidth]{figures/TestBeam/100micron_Edep.pdf}
+%%     \caption{}
+%%   \end{subfigure}
+%%   \caption{For $100\,\micron$ thick sensor.}
+%%   \label{fig:G4_simu_data_100micron}
+%% \end{figure}
+
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.3\textwidth}
+%%     \includegraphics[width=\textwidth]{figures/TestBeam/150micron_sizeX.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.3\textwidth}
+%%     \includegraphics[width=\textwidth]{figures/TestBeam/150micron_resX.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.3\textwidth}
+%%     \includegraphics[width=\textwidth]{figures/TestBeam/150micron_Edep.pdf}
+%%     \caption{}
+%%   \end{subfigure}
+%%   \caption{For $150\,\micron$ thick sensor.}
+%%   \label{fig:G4_simu_data_150micron}
+%% \end{figure}
