[Software] added a software section

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -112,6 +112,7 @@
   include/Introduction,
   include/CLIC,
   include/Silicon,
+  include/Software,
   include/Calibration,
   % include/AllPix,
   include/Telescope,
@@ -215,6 +216,7 @@ refs,
 \input{include/Introduction}
 \input{include/CLIC}
 \input{include/Silicon}
+\input{include/Software}
 \input{include/Calibration}
 % \input{include/AllPix}
 \input{include/Telescope}
