--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -1,45 +1,120 @@
-%
-% Title page layout for submitted version.
-%
-\title{\thesistitle}
-\subtitle{\vspace*{4ex}
-  \begin{otherlanguage}{UKenglish}
-  A thesis submitted to attain the degree of \vspace*{1ex} \\
-  DOCTOR OF SCIENCES of ETH ZURICH \vspace*{1ex}\\
-  (Dr. sc. ETH Zurich) \vspace*{3ex}
-  \end{otherlanguage}
-}
-\author{%
-  presented by \vspace*{1ex} \\
-  \thesisauthor \vspace*{3ex}\\
-  \textit{ing. \'{e}l. dipl. EPF, EPF Lausanne} \vspace*{3ex}\\
-  born on 11.08.1989 \vspace*{2ex}\\
-  \thesistown \vspace*{4ex}\\
-  accepted on the recommendation of \vspace*{2ex}\\
-  \textbf{Prof. Dr. G\"{u}nther Dissertori} \\
-}
-\date{}
-\publishers{%
-        \thesisyear
-}
-\lowertitleback{\normalsize
-  \begin{otherlanguage}{UKenglish}
-    %% Angefertigt mit Genehmigung der 
-    %% Mathematisch-Naturwissenschaftlichen Fakultät der
-    %% Rheinischen Friedrich-Wilhelms-Universität Bonn
-  \end{otherlanguage}
-  
-  \vspace*{10ex minus 4ex}
-  
-  \noindent
-  \begin{otherlanguage}{UKenglish}
-    %% \begin{tabular}{@{}ll}
-    %%   \thesisrefereeonetext: & \thesisrefereeone\\
-    %%   \thesisrefereetwotext: & \thesisrefereetwo\\[2ex]
-    %%   Tag der Promotion:      & \\
-    %%   Erscheinungsjahr:       & 
-    %% \end{tabular}
-  \end{otherlanguage}
-}
 
-\maketitle
+\begin{titlepage}
+
+\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for the horizontal lines, change thickness here
+
+\center % Center everything on the page
+ 
+%----------------------------------------------------------------------------------------
+%	HEADING SECTIONS
+%----------------------------------------------------------------------------------------
+
+\textsc{\LARGE DISS. ETH NO. xxxxx}\\[1.5cm] % Name of your university/college
+%% \textsc{\Large Major Heading}\\[0.5cm] % Major heading such as course name
+%% \textsc{\large Minor Heading}\\[0.5cm] % Minor heading such as course title
+
+%----------------------------------------------------------------------------------------
+%	TITLE SECTION
+%----------------------------------------------------------------------------------------
+
+\HRule \\[0.4cm]
+{ \huge \bfseries \thesistitle}\\[0.4cm] % Title of your document
+\HRule \\[1.5cm]
+ 
+%----------------------------------------------------------------------------------------
+%	AUTHOR SECTION
+%----------------------------------------------------------------------------------------
+
+{\Large A thesis submitted to attain the degree of} \vspace*{1ex} \\
+{\Large DOCTOR OF SCIENCES of ETH ZURICH} \vspace*{1ex}\\
+{\Large (Dr. sc. ETH Zurich)} \vspace*{3ex}
+
+
+{\Large presented by \vspace*{1ex}} \\
+{\Large \thesisauthor \vspace*{3ex}}\\
+{\Large \textit{ing. \'{e}l. dipl. EPF, EPF Lausanne}} \vspace*{3ex}\\
+{\Large born on 11.08.1989} \vspace*{2ex}\\
+{\Large \thesistown} \vspace*{4ex}\\
+{\Large accepted on the recommendation of} \vspace*{2ex}\\
+{\Large \textbf{Prof. Dr. G\"{u}nther Dissertori}} \\
+
+%% \begin{minipage}{0.4\textwidth}
+%% \begin{flushleft} \large
+%% \emph{Author:}\\
+%% John \textsc{Smith} % Your name
+%% \end{flushleft}
+%% \end{minipage}
+%% ~
+%% \begin{minipage}{0.4\textwidth}
+%% \begin{flushright} \large
+%% \emph{Supervisor:} \\
+%% Dr. James \textsc{Smith} % Supervisor's Name
+%% \end{flushright}
+%% \end{minipage}\\[4cm]
+
+% If you don't want a supervisor, uncomment the two lines below and remove the section above
+%\Large \emph{Author:}\\
+%John \textsc{Smith}\\[3cm] % Your name
+
+%----------------------------------------------------------------------------------------
+%	DATE SECTION
+%----------------------------------------------------------------------------------------
+
+{\large 2016}\\[3cm] % Date, change the \today to a set date if you want to be precise
+
+%----------------------------------------------------------------------------------------
+%	LOGO SECTION
+%----------------------------------------------------------------------------------------
+
+%\includegraphics{Logo}\\[1cm] % Include a department/university logo - this will require the graphicx package
+ 
+%----------------------------------------------------------------------------------------
+
+\vfill % Fill the rest of the page with whitespace
+
+\end{titlepage}
+%% %
+%% % Title page layout for submitted version.
+%% %
+%% \title{\thesistitle}
+%% \subtitle{\vspace*{4ex}
+%%   \begin{otherlanguage}{UKenglish}
+%%   A thesis submitted to attain the degree of \vspace*{1ex} \\
+%%   DOCTOR OF SCIENCES of ETH ZURICH \vspace*{1ex}\\
+%%   (Dr. sc. ETH Zurich) \vspace*{3ex}
+%%   \end{otherlanguage}
+%% }
+%% \author{%
+%%   presented by \vspace*{1ex} \\
+%%   \thesisauthor \vspace*{3ex}\\
+%%   \textit{ing. \'{e}l. dipl. EPF, EPF Lausanne} \vspace*{3ex}\\
+%%   born on 11.08.1989 \vspace*{2ex}\\
+%%   \thesistown \vspace*{4ex}\\
+%%   accepted on the recommendation of \vspace*{2ex}\\
+%%   \textbf{Prof. Dr. G\"{u}nther Dissertori} \\
+%% }
+%% \date{}
+%% \publishers{%
+%%         \thesisyear
+%% }
+%% \lowertitleback{\normalsize
+%%   \begin{otherlanguage}{UKenglish}
+%%     %% Angefertigt mit Genehmigung der 
+%%     %% Mathematisch-Naturwissenschaftlichen Fakultät der
+%%     %% Rheinischen Friedrich-Wilhelms-Universität Bonn
+%%   \end{otherlanguage}
+  
+%%   \vspace*{10ex minus 4ex}
+  
+%%   \noindent
+%%   \begin{otherlanguage}{UKenglish}
+%%     %% \begin{tabular}{@{}ll}
+%%     %%   \thesisrefereeonetext: & \thesisrefereeone\\
+%%     %%   \thesisrefereetwotext: & \thesisrefereetwo\\[2ex]
+%%     %%   Tag der Promotion:      & \\
+%%     %%   Erscheinungsjahr:       & 
+%%     %% \end{tabular}
+%%   \end{otherlanguage}
+%% }
+
+%% \maketitle
